--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "react-bootstrap": "^1.4.0",
     "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
+    "react-native": "^0.63.4",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-stripe-elements": "^6.1.2",
     "typescript": "^4.1.5",
     "web-vitals": "^1.1.0"
   },
